--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,27 +28,27 @@
         </div>
         <div class="container body-content" style="background-image: url('/Content/Images/fadedbackground.jpg')">
             <div class="jumbotron">
-                <h1 id="header" style="font-size:200%">A Taste of Orthodoxy - 2014 - <i>Best one yet!</i></h1>
+                <h1 id="header" style="font-size:200%">A Taste of Orthodoxy - 2015 - <i>Best one yet!</i></h1>
                 <h3 style="text-align:center; font-style:italic; font-weight:bold; color:yellow">"Boulder's Greek Festival"</h3>
                 <div style="font-size:67%; text-align:center;">
                     (Click on a date for pictures from this year's festival) <br/>
                     <span style="white-space:nowrap">
                         <i class="glyphicon glyphicon-star"></i>
-                        <span style="white-space:nowrap"><a href="http://www.tasteoforthodoxy.org/content/pictures/09-05-2014/" target="_new">Friday Sept 5<sup>th</sup></a></span>&nbsp;
+                        <span style="white-space:nowrap"><a href="http://www.tasteoforthodoxy.org/content/pictures/09-05-2014/" target="_new">Friday Sept 11<sup>th</sup></a></span>&nbsp;
+                        <span style="white-space:nowrap">5pm to 10pm</span>&nbsp;
+                        <i class="glyphicon glyphicon-star"></i>
+                    </span>
+
+                    <span style="white-space:nowrap">
+                        <i class="glyphicon glyphicon-star"></i>
+                        <span style="white-space:nowrap"><a href="http://www.tasteoforthodoxy.org/content/pictures/09-06-2014/" target="_new">Saturday Sept 12<sup>th</sup></a></span>&nbsp;
                         <span style="white-space:nowrap">11am to 10pm</span>&nbsp;
                         <i class="glyphicon glyphicon-star"></i>
                     </span>
 
                     <span style="white-space:nowrap">
                         <i class="glyphicon glyphicon-star"></i>
-                        <span style="white-space:nowrap"><a href="http://www.tasteoforthodoxy.org/content/pictures/09-06-2014/" target="_new">Saturday Sept 6<sup>th</sup></a></span>&nbsp;
-                        <span style="white-space:nowrap">11am to 10pm</span>&nbsp;
-                        <i class="glyphicon glyphicon-star"></i>
-                    </span>
-
-                    <span style="white-space:nowrap">
-                        <i class="glyphicon glyphicon-star"></i>
-                        <span style="white-space:nowrap"><a href="http://www.tasteoforthodoxy.org/content/pictures/09-07-2014/" target="_new">Sunday Sept 7<sup>th</sup></a></span>&nbsp;
+                        <span style="white-space:nowrap"><a href="http://www.tasteoforthodoxy.org/content/pictures/09-07-2014/" target="_new">Sunday Sept 13<sup>th</sup></a></span>&nbsp;
                         <span style="white-space:nowrap">11am to 6pm</span>
                         <i class="glyphicon glyphicon-star"></i>
                     </span>
