--- a/Views/Home/Schedule.cshtml
+++ b/Views/Home/Schedule.cshtml
@@ -8,7 +8,7 @@
     <div class="row.center-block">
         <table class="table-bordered" style="text-indent:5px; background-color:#c9d0fa; width:90%;" >
             <tr>
-                <td colspan="3" style="font-size:x-large; text-align:center;"><strong>Friday September 5<sup>th</sup></strong></td>
+                <td colspan="3" style="font-size:x-large; text-align:center;"><strong>Friday September 11<sup>th</sup></strong></td>
             </tr>
             <tr style="background-color:beige; font-size:large; text-align:center; font-weight:bold;">
                 <td>Time</td>
@@ -16,23 +16,18 @@
                 <td>Location</td>
             </tr>
             <tr>
-                <td>11:00am</td>
-                <td>Blessing Service</td>
+                <td>4:00pm</td>
+                <td>Agiasmo and Triasagion Service to commemorate 9/11</td>
                 <td>Church</td>
             </tr>
-            <tr>
-                <td style="background-color:yellow;color:red;">11:00am</td>
-                <td style="background-color:yellow;color:red;">Open for Lunch!</td>
-                <td style="background-color:yellow;color:red;">Church</td>
-            </tr>
-            <tr>
+
                 <td>5:00pm</td>
                 <td>Live music starts with <a href="http://www.jessemanno.com/" target="_blank">Jesse Manno and Friends</a></td>
                 <td>Stage</td>
             </tr>
             <tr>
                 <td>6:30pm</td>
-                <td>Fotismeni&nbsp;</td>
+                <td>Sts Peter &amp; Paul Dance Group</td>
                 <td>Stage</td>
             </tr>
             <tr>
@@ -55,7 +50,7 @@
         <table class="table-bordered" style="text-indent:5px; background-color:#c9d0fa; width:90%;">
             <tr>
                 <td colspan="3" style="font-size:x-large; text-align:center;">
-                    <strong>Saturday September 6<sup>th</sup></strong>
+                    <strong>Saturday September 12<sup>th</sup></strong>
                 </td>
             </tr>
             <tr style="background-color:beige; font-size:large; text-align:center; font-weight:bold;">
@@ -63,35 +58,41 @@
                 <td>Event</td>
                 <td>Location</td>
             </tr>
+           
             <tr>
                 <td>11:00am</td>
                 <td>Taste of Orthodoxy opens!</td>
                 <td></td>
             </tr>
+           <tr>
+                <td>11:00am - 12:00pm</td>
+                <td>Boulder Rural Fire Truck - tour and hats for the kids</td>
+                <td>Parking Lot</td>
+            </tr>
             <tr>
-                <td>12:15pm</td>
-                <td>Asterakia dance group</td>
+                <td>12:00pm</td>
+                <td>Sts Peter &amp; Paul Dance group</td>
                 <td>Stage</td>
             </tr>
             <tr>
                 <td>12:30pm</td>
-                <td>Fotismeni dance group</td>
+                <td>Dance Group TBD</td>
                 <td>Stage</td>
             </tr>
             <tr>
-                <td>1:30pm</td>
+                <td>12:30pm</td>
+                <td>Church Tour and informal Q&amp;A</td>
+                <td>Stage</td>
+            </tr>
+            <tr>
+                <td>1:00pm</td>
                 <td>Byzantine Choir</td>
                 <td>Church</td>
             </tr>
             <tr>
                 <td>2:00pm</td>
-                <td><i>What is Orthodox Christianity</i> &amp; informal Q&amp;A</td>
+                <td>Church Tour and informal Q&amp;A</td>
                 <td>Church</td>
-            </tr>
-            <tr>
-                <td>2:00pm</td>
-                <td>Boulder Rural Fire Truck - tour and hats for the kids</td>
-                <td>Parking Lot</td>
             </tr>
             <tr>
                 <td>3:30pm</td>
@@ -100,13 +101,13 @@
             </tr>
             <tr>
                 <td>4:00pm</td>
-                <td>Byzantine Choir chants Vespers Service w/informal Q&A after</td>
+                <td>Choir chants Vespers Service</td>
                 <td>Church</td>
             </tr>
             <tr>
-                <td>4:30pm</td>
-                <td>Hora Romaneasca Romanian dance group</td>
-                <td>Stage</td>
+                <td>5:00pm</td>
+                <td>Church Tour and informal Q&amp;A</td>
+                <td>Church</td>
             </tr>
             <tr>
                 <td>5:00pm</td>
@@ -120,7 +121,7 @@
             </tr>
             <tr>
                 <td>6:30pm</td>
-                <td>Fotismeni Dance Group</td>
+                <td>Sts Peter &amp; Paul Dance Group</td>
                 <td>Stage</td>
             </tr>
             <tr>
@@ -135,7 +136,7 @@
             </tr>
             <tr>
                 <td>8:30pm</td>
-                <td>Fotismeni&nbsp;- Taverna Dance Show</td>
+                <td>Sts Peter &amp; Paul Dance Group - Taverna Show</td>
                 <td>Stage</td>
             </tr>
             <tr>
@@ -149,7 +150,7 @@
 
             <tr>
                 <td colspan="3" style="font-size:x-large; text-align:center;">
-                    <strong>Sunday September 7<sup>th</sup></strong>
+                    <strong>Sunday September 13<sup>th</sup></strong>
                 </td>
             </tr>
             <tr style="background-color:beige; font-size:large; text-align:center; font-weight:bold;">
@@ -172,58 +173,58 @@
                 <td>Taste of Orthodoxy Opens!</td>
                 <td>Stage</td>
             </tr>
-            <tr>
-                <td>11:45am</td>
-                <td>Asterakia Dance Group</td>
-                <td>Stage</td>
+           <tr>
+                <td>12:00pm</td>
+                <td>Choir/Church Tour and informal Q &amp; A</td>
+                <td>Church</td>
             </tr>
             <tr>
                 <td>12:00pm</td>
-                <td>Fotismeni Dance Group</td>
+                <td>Sts Peter &amp; Paul Dance Group</td>
                 <td>Stage</td>
             </tr>
             <tr>
-                <td>12:30pm</td>
+                <td>1:00pm</td>
                 <td>Live Music: Jesse Manno and Friends</td>
                 <td>Stage</td>
             </tr>
             <tr>
-                <td>1:30pm</td>
+                <td>1:00pm</td>
                 <td>Byzantine Choir presentation</td>
                 <td>Church</td>
             </tr>
             <tr>
                 <td>2:00pm</td>
-                <td>What is Orthodox Christianity? w/Informal Q &amp A</td>
-                <td>Church</td>
-            </tr>
-            <tr>
-                <td>2:30pm</td>
                 <td>Byzantine Iconography presentation</td>
                 <td>Church</td>
             </tr>
-            <tr>
+             <tr>
                 <td>3:00pm</td>
-                <td>Fotismeni Dance Group</td>
+                <td>Sts Peter &amp; Paul Dance Group - Taverna Show</td>
                 <td>Stage</td>
             </tr>
             <tr>
                 <td>3:30pm</td>
-                <td>Doina Dance Group</td>
+                <td>Dance Group - TBD</td>
                 <td>Stage</td>
             </tr>
             <tr>
-                <td>3:45pm</td>
-                <td>Fotia Dance Group</td>
-                <td>Stage</td>
+                <td>3:30pm</td>
+                <td>Doina Choir</td>
+                <td>Church</td>
             </tr>
             <tr>
-                <td>4:15pm</td>
+                <td>4:00pm</td>
                 <td>Live Music: Jesse Manno and Friends</td>
                 <td>Stage</td>
             </tr>
             <tr>
-                <td>6:00pm</td>
+                <td>4:00pm</td>
+                <td>Choir/Church Tour and informal Q &amp; A</td>
+                <td>Church</td>
+            </tr>
+            <tr>
+                <td>5:00pm</td>
                 <td>Taste of Orthodoxy closes</td>
                 <td></td>
             </tr>
