--- a/Views/Home/Schedule.cshtml
+++ b/Views/Home/Schedule.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Schedule</h2>
-<div style="display: table;margin-left: auto;margin-right: auto;float:none; ">
+<div style="display: table;margin-left: auto;margin-right: auto;float:none;width:fill-available; ">
     <div class="row.center-block">
         <table class="table-bordered" style="text-indent:5px; background-color:#c9d0fa; width:90%;" >
             <tr>
