--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                 <h1 id="header" style="font-size:200%">A Taste of Orthodoxy - 2015 - <i>Best one yet!</i></h1>
                 <h3 style="text-align:center; font-style:italic; font-weight:bold; color:yellow">"Boulder's Greek Festival"</h3>
                 <div style="font-size:67%; text-align:center;">
-                    (Click on a date for pictures from this year's festival) <br/>
+                    (Click on a date for pictures from last year's festival) <br/>
                     <span style="white-space:nowrap">
                         <i class="glyphicon glyphicon-star"></i>
                         <span style="white-space:nowrap"><a href="http://www.tasteoforthodoxy.org/content/pictures/09-05-2014/" target="_new">Friday Sept 11<sup>th</sup></a></span>&nbsp;
