--- a/Views/Home/Schedule.cshtml
+++ b/Views/Home/Schedule.cshtml
@@ -20,24 +20,29 @@
                 <td>Agiasmo and Triasagion Service to commemorate 9/11</td>
                 <td>Church</td>
             </tr>
-
+            <tr>
                 <td>5:00pm</td>
                 <td>Live music starts with <a href="http://www.jessemanno.com/" target="_blank">Jesse Manno and Friends</a></td>
                 <td>Stage</td>
             </tr>
             <tr>
-                <td>6:30pm</td>
-                <td>Sts Peter &amp; Paul Dance Group</td>
-                <td>Stage</td>
+                <td>6:00pm</td>
+                <td>Church Tour and informal Q&amp;A</td>
+                <td>Church</td>
             </tr>
             <tr>
-                <td>7:00pm</td>
-                <td>Jesse Manno and Friends</td>
+                <td>6:30pm</td>
+                <td>Dancing Zorbas - Greek Dance Group</td>
                 <td>Stage</td>
             </tr>
             <tr>
                 <td>8:00pm</td>
-                <td>Fotismeni - Taverna Show</td>
+                <td>Church Tour and informal Q&amp;A</td>
+                <td>Church</td>
+            </tr>
+            <tr>
+                <td>8:30pm</td>
+                <td>Dancing Zorbas - Greek Dance Group</td>
                 <td>Stage</td>
             </tr>
             <tr>
@@ -65,28 +70,33 @@
                 <td></td>
             </tr>
            <tr>
-                <td>11:00am - 12:00pm</td>
+                <td>12:00am - 2:00pm</td>
                 <td>Boulder Rural Fire Truck - tour and hats for the kids</td>
                 <td>Parking Lot</td>
             </tr>
             <tr>
                 <td>12:00pm</td>
-                <td>Sts Peter &amp; Paul Dance group</td>
+                <td>Dancing Zorbas - Kids Dance group</td>
                 <td>Stage</td>
             </tr>
             <tr>
-                <td>12:30pm</td>
-                <td>Dance Group TBD</td>
+                <td>12:15pm</td>
+                <td>Dancing Zorbas - Dance group</td>
                 <td>Stage</td>
             </tr>
             <tr>
                 <td>12:30pm</td>
                 <td>Church Tour and informal Q&amp;A</td>
+                <td>Church</td>
+            </tr>
+            <tr>
+                <td>12:45pm</td>
+                <td>Fotia - Greek Dance group</td>
                 <td>Stage</td>
             </tr>
             <tr>
                 <td>1:00pm</td>
-                <td>Byzantine Choir</td>
+                <td>Choir Concert</td>
                 <td>Church</td>
             </tr>
             <tr>
@@ -95,9 +105,9 @@
                 <td>Church</td>
             </tr>
             <tr>
-                <td>3:30pm</td>
-                <td>Byzantine Iconography Presentation</td>
-                <td>Church</td>
+                <td>2:30pm</td>
+                <td>Fotia - Greek Dance group</td>
+                <td>Stage</td>
             </tr>
             <tr>
                 <td>4:00pm</td>
@@ -114,14 +124,14 @@
                 <td>Live Music: Jesse Manno and Friends</td>
                 <td>Stage</td>
             </tr>
-            <tr>
+            <tr>    
                 <td>6:00pm</td>
-                <td>Kleftes Dance Group</td>
+                <td>Kleftes - Greek Dance Group</td>
                 <td>Stage</td>
             </tr>
             <tr>
                 <td>6:30pm</td>
-                <td>Sts Peter &amp; Paul Dance Group</td>
+                <td>Dancing Zorbas - Greek Dance Group</td>
                 <td>Stage</td>
             </tr>
             <tr>
@@ -129,14 +139,19 @@
                 <td>Live Music: Jesse Manno and Friends</td>
                 <td>Stage</td>
             </tr>
+             <tr>
+                <td>7:00pm</td>
+                <td>Church Tour and informal Q&amp;A</td>
+                <td>Church</td>
+            </tr>
             <tr>
                 <td>8:00pm</td>
-                <td>Kleftes Dance Group Night Show</td>
+                <td>Kleftes - Greek Dance Group Night Show</td>
                 <td>Stage</td>
             </tr>
             <tr>
                 <td>8:30pm</td>
-                <td>Sts Peter &amp; Paul Dance Group - Taverna Show</td>
+                <td>Dancing Zorbas - Greek Dance Group Taverna Show</td>
                 <td>Stage</td>
             </tr>
             <tr>
