--- a/Views/Home/Schedule.cshtml
+++ b/Views/Home/Schedule.cshtml
@@ -188,6 +188,11 @@
                 <td>Taste of Orthodoxy Opens!</td>
                 <td>Stage</td>
             </tr>
+            <tr>
+                <td>12:00am - 2:00pm</td>
+                <td>Boulder Rural Fire Truck - tour and hats for the kids</td>
+                <td>Parking Lot</td>
+            </tr>
            <tr>
                 <td>12:00pm</td>
                 <td>Choir/Church Tour and informal Q &amp; A</td>
@@ -195,7 +200,12 @@
             </tr>
             <tr>
                 <td>12:00pm</td>
-                <td>Sts Peter &amp; Paul Dance Group</td>
+                <td>Dancing Zorbas Kids - Greek Dance Group</td>
+                <td>Stage</td>
+            </tr>
+            <tr>
+                <td>12:15pm</td>
+                <td>Dancing Zorbas - Greek Dance Group</td>
                 <td>Stage</td>
             </tr>
             <tr>
@@ -205,22 +215,17 @@
             </tr>
             <tr>
                 <td>1:00pm</td>
-                <td>Byzantine Choir presentation</td>
+                <td>Choir concert</td>
                 <td>Church</td>
             </tr>
             <tr>
                 <td>2:00pm</td>
-                <td>Byzantine Iconography presentation</td>
+                <td>Church Tour and informal Q &amp; A</td>
                 <td>Church</td>
             </tr>
-             <tr>
-                <td>3:00pm</td>
-                <td>Sts Peter &amp; Paul Dance Group - Taverna Show</td>
-                <td>Stage</td>
-            </tr>
             <tr>
-                <td>3:30pm</td>
-                <td>Dance Group - TBD</td>
+                <td>3:00pm</td>
+                <td>Dancing Zorbas - Greek Dance Group</td>
                 <td>Stage</td>
             </tr>
             <tr>
@@ -235,7 +240,7 @@
             </tr>
             <tr>
                 <td>4:00pm</td>
-                <td>Choir/Church Tour and informal Q &amp; A</td>
+                <td>Church Tour and informal Q &amp; A</td>
                 <td>Church</td>
             </tr>
             <tr>
