--- a/Views/Home/Schedule.cshtml
+++ b/Views/Home/Schedule.cshtml
@@ -36,6 +36,11 @@
                 <td>Stage</td>
             </tr>
             <tr>
+                <td>7:00pm</td>
+                <td>Jesse Manno and Friends</td>
+                <td>Stage</td>
+            </tr>
+            <tr>
                 <td>8:00pm</td>
                 <td>Church Tour and informal Q&amp;A</td>
                 <td>Church</td>
