Better late than never.

--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -164,7 +164,7 @@
         <td>
             <a href="http://www.boulderbeer.com" target="_blank">Boulder Beer</a>
         </td>
-        <td>A variety of our favorite hometown brews!  Buffalo Gold (Golden Ale), Singletrack Copper Ale, Hazed and Infused, and Planet Porter.  Yum!</td>
+        <td>Some of our favorite hometown brews - Buffalo Gold (Golden Ale), Hoopla "Festival IPA".  Yum!</td>
         <td class="pricecol">5 tickets</td>
     </tr>
     <tr>
@@ -179,13 +179,8 @@
     </tr>
     <tr>
         <td>Bottled Water</td>
-        <td>Bottled Eldorado Springs Water</td>
+        <td></td>
         <td class="pricecol">1 ticket</td>
-    </tr>
-    <tr>
-        <td>Greek Coffee</td>
-        <td>Strong, flavorful coffee with grounds</td>
-        <td class="pricecol">2 tickets</td>
     </tr>
     <tr>
         <td>Frappe</td>
@@ -193,8 +188,13 @@
         <td class="pricecol">4 Tickets</td>
     </tr>
     <tr>
+        <td>Greek Coffee</td>
+        <td>Traditional Greek coffee.  Strong, flavorful and with grounds</td>
+        <td class="pricecol">3 tickets</td>
+    </tr>
+    <tr>
         <td>Regular Coffee</td>
-        <td>Invented by Greeks! (probably)</td>
+        <td>Invented by Greeks! (probably...)</td>
         <td class="pricecol">1 ticket</td>
     </tr>
     <tr>
@@ -205,27 +205,36 @@
         <td><strong>Description</strong></td>
         <td class="pricecol"><strong>Price</strong></td>
     </tr>
+     <tr>
+        <td>Loukoumades</td>
+        <td>Fried donut holes, splashed with syrup, walnuts and cinnimon</td>
+        <td class="pricecol">4 tickets</td>
+    </tr>
     <tr>
         <td>Baklava</td>
-        <td>Layered phyllo dough with chopped walnuts, honey, and spices</td>
-        <td class="pricecol">2 tickets</td>
+        <td>Layered phyllo dough with chopped walnuts, honey, and spices.  A Greek tradition!</td>
+        <td class="pricecol">3 tickets</td>
     </tr>
     <tr>
         <td>Chocolate Baklava</a></td>
-        <td>Baklava with in dark Chocolate inside!.  Oh yeah!</td>
-        <td class="pricecol">One for 3 tix</td>
+        <td>Traditional baklava with a twist!  Layered phyllo dough with chopped walnuts, honey and spices.  Don't forget the cocoa and chocolate chips inside, and dark Chocolate on top!.  Oh yeah!</td>
+        <td class="pricecol">3 tickets</td>
     </tr>
     <tr>
-        <td>Homemade Greek Frozen Yoghurt</td>
-        <td></td>
-        <td class="pricecol">2 ticket</td>
-    </tr>
-    <tr>
-        <td>Homemade Greek Frozen Yoghurt with Baklava</td>
-        <td></td>
+        <td>Rice Pudding</td>
+        <td>Creamy, sweet and delicious rice puding that will make any sweet tooth go crazy!</td>
         <td class="pricecol">3 ticket</td>
     </tr>
-
+     <tr>
+        <td>Ouzo Cake</td>
+        <td>Ouzo flavored cake - a Taste of Orthodoxy Exclusive!</td>
+        <td class="pricecol">3 tickets</td>
+    </tr>
+    <tr>
+        <td>Guraybeh</td>
+        <td>Arabic butter cookies</td>
+        <td class="pricecol">1 ticket</td>
+    </tr>    
     <tr>
         <td>Koko Kamati</td>
         <td>Greek Chocolate Chip Cookie!</td>
@@ -242,34 +251,39 @@
         <td class="pricecol">1 ticket</td>
     </tr>
     <tr>
-        <td>Loukoumades</td>
-        <td>Doughnut Holes, Greek Style!</td>
-        <td class="pricecol">4 tickets</td>
-    </tr>
-    <tr>
         <td>Melomacarona</td>
         <td>Honey & Walnut Cookie</td>
         <td class="pricecol">1 ticket</td>
     </tr>
-    <tr>
-        <td>Ouzo Cake</td>
-        <td>Ouzo flavored cake - a Taste of Orthodoxy Exclusive!</td>
-        <td class="pricecol">2 tickets</td>
-    </tr>
+   
     <tr>
         <td>Paximathia</td>
         <td>Cinnamon/brown sugar biscotti</td>
         <td class="pricecol">1 ticket</td>
     </tr>
     <tr>
-        <td>Guraybeh</td>
-        <td>Arabic butter cookies</td>
-        <td class="pricecol">1 ticket</td>
+        <td>Date Cake</td>
+        <td>Date flavored cake.  A delicious tream!</td>
+        <td class="pricecol">2 ticket</td>
+    </tr>
+    <tr>
+        <td>Greek Frozen Yoghurt</td>
+        <td>Homemade plain frozen yoghurt.  The perfect way to cool down!</td>
+        <td class="pricecol">3 ticket</td>
+    </tr>
+    <tr>
+        <td>Baklava Frozen Yoghurt</td>
+        <td>Greek frozen yoghurt with an additional treat!</td>
+        <td class="pricecol">4 ticket</td>
     </tr>
     <tr>
         <td>Pastry Combo</td>
-        <td>Variety of Mediterranean cookies</td>
+        <td>A selection of Mediterranean cookies</td>
+        <td class="pricecol">10 tickets</td>
+    </tr>
+    <tr>
+        <td>Baklava Box</td>
+        <td>A box of the best baklava</td>
         <td class="pricecol">10 tickets</td>
     </tr>
 </table>
-
