--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -217,7 +217,8 @@
     </tr>
     <tr>
         <td>Chocolate Baklava</a></td>
-        <td>Traditional baklava with a twist!  Layered phyllo dough with chopped walnuts, honey and spices.  Don't forget the cocoa and chocolate chips inside, and dark Chocolate on top!.  Oh yeah!</td>
+        <td>Traditional baklava with a twist!  Layered phyllo dough with chopped walnuts, honey and spices.  <br/>
+             Don't forget the cocoa and chocolate chips inside, and dark Chocolate on top!.  Oh yeah!</td>
         <td class="pricecol">3 tickets</td>
     </tr>
     <tr>
