--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     (Click on a date for pictures from previous festivals) <br/>
                     <span style="white-space:nowrap">
                         <i class="glyphicon glyphicon-star"></i>
-                        <span style="white-space:nowrap"><a href="http://www.tasteoforthodoxy.org/content/pictures/09-05-2014/" target="_new">Friday Sept 9<sup>th</sup></a></span>&nbsp;
+                        <span style="white-space:nowrap h3"><a href="http://www.tasteoforthodoxy.org/content/pictures/09-05-2014/" target="_new">Friday Sept 9<sup>th</sup></a></span>&nbsp;
                         <span style="white-space:nowrap">5pm to 10pm</span>&nbsp;
                         <i class="glyphicon glyphicon-star"></i>
                     </span>
