--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,10 +32,11 @@
                 <h3 style="text-align:center; font-style:italic; font-weight:bold; color:yellow">"Boulder's Greek Festival"</h3>
                 <div style="font-size:67%; text-align:center;">
                     (Click on a date for pictures from previous festivals) <br/>
+                    <h4>
                     <span style="white-space:nowrap">
                         <i class="glyphicon glyphicon-star"></i>
-                        <h3><span style="white-space:nowrap"><a href="http://www.tasteoforthodoxy.org/content/pictures/09-05-2014/" target="_new">Friday Sept 9<sup>th</sup></a></span>&nbsp;
-                        <span style="white-space:nowrap">5pm to 10pm</span></h3>&nbsp;
+                        <span style="white-space:nowrap"><a href="http://www.tasteoforthodoxy.org/content/pictures/09-05-2014/" target="_new">Friday Sept 9<sup>th</sup></a></span>&nbsp;
+                        <span style="white-space:nowrap">5pm to 10pm</span><&nbsp;
                         <i class="glyphicon glyphicon-star"></i>
                     </span>
 
@@ -52,6 +53,7 @@
                         <span style="white-space:nowrap">11am to 5pm</span>
                         <i class="glyphicon glyphicon-star"></i>
                     </span>
+                    </h4>
                     <br/>
                 </div>
             </div>
