Updated with final changes

--- a/Views/Home/Schedule.cshtml
+++ b/Views/Home/Schedule.cshtml
@@ -16,6 +16,11 @@
                 <td>Location</td>
             </tr>
             <tr>
+                <td>4:00pm</td>
+                <td>Agiasmo and Triasagion Service to commemorate 9/11</td>
+                <td>Stage</td>
+            </tr>
+            <tr>
                 <td>5:00pm</td>
                 <td>Live music starts with <a href="http://www.jessemanno.com/" target="_blank">Jesse Manno and Friends</a></td>
                 <td>Stage</td>
@@ -39,11 +44,6 @@
                 <td>8:00pm</td>
                 <td>Church Tour and informal Q&amp;A</td>
                 <td>Church</td>
-            </tr>
-            <tr>
-                <td>8:30pm</td>
-                <td>Dancing Zorbas - Greek Dance Group</td>
-                <td>Stage</td>
             </tr>
             <tr>
                 <td>9:00pm</td>
@@ -80,18 +80,8 @@
                 <td>Stage</td>
             </tr>
             <tr>
-                <td>12:15pm</td>
-                <td>Dancing Zorbas - Dance group</td>
-                <td>Stage</td>
-            </tr>
-            <tr>
                 <td>12:30pm</td>
-                <td>Church Tour and informal Q&amp;A</td>
-                <td>Church</td>
-            </tr>
-            <tr>
-                <td>12:45pm</td>
-                <td>Fotia - Greek Dance group</td>
+                <td>Fotia - Greek Dance Group Performance</td>
                 <td>Stage</td>
             </tr>
             <tr>
@@ -113,6 +103,11 @@
                 <td>4:00pm</td>
                 <td>Choir chants Vespers Service</td>
                 <td>Church</td>
+            </tr>
+             <tr>
+                <td>4:00pm</td>
+                <td>Hora Romaniasca Romanian Dance Group</td>
+                <td>Stage</td>
             </tr>
             <tr>
                 <td>5:00pm</td>
@@ -150,11 +145,6 @@
                 <td>Stage</td>
             </tr>
             <tr>
-                <td>8:30pm</td>
-                <td>Dancing Zorbas - Greek Dance Group Taverna Show</td>
-                <td>Stage</td>
-            </tr>
-            <tr>
                 <td>9:00pm</td>
                 <td>Live Music: Jesse Manno and Friends</td>
                 <td>Stage</td>
@@ -162,7 +152,6 @@
         </table>
         <br />
         <table class="table-bordered" style="text-indent:5px; background-color:#c9d0fa; width:100%;">
-
             <tr>
                 <td colspan="3" style="font-size:x-large; text-align:center;">
                     <strong>Sunday September 11<sup>th</sup></strong>
@@ -200,11 +189,6 @@
             </tr>
             <tr>
                 <td>12:00pm</td>
-                <td>Dancing Zorbas Kids - Greek Dance Group</td>
-                <td>Stage</td>
-            </tr>
-            <tr>
-                <td>12:15pm</td>
                 <td>Dancing Zorbas - Greek Dance Group</td>
                 <td>Stage</td>
             </tr>
@@ -219,18 +203,18 @@
                 <td>Church</td>
             </tr>
             <tr>
+                <td>1:30pm</td>
+                <td>Byzantine Iconography Presentation</td>
+                <td>Church</td>
+            </tr>
+            <tr>
                 <td>2:00pm</td>
                 <td>Church Tour and informal Q &amp; A</td>
                 <td>Church</td>
             </tr>
             <tr>
                 <td>3:00pm</td>
-                <td>Dancing Zorbas - Greek Dance Group</td>
-                <td>Stage</td>
-            </tr>
-            <tr>
-                <td>3:30pm</td>
-                <td>Doina Choir</td>
+                <td>Church Tour and informal Q &amp; A</td>
                 <td>Church</td>
             </tr>
             <tr>
